主页面多tab页面生效
1、tab切换
2、多个tab页面简单实现，方便看到切换效果
首页、物流跟踪、信息查询、个人中心

--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -46,6 +46,26 @@
 	overflow: hidden;
 }
 
+.title {
+	position: absolute;
+	top: 0;
+
+	width: 100%;
+	height: 50px;
+	line-height: 50px;
+	font-size: 18px;
+	text-align: center;
+}
+
+.title-red {
+	color: white;
+	background-color: #F43737;
+}
+
+.background-red {
+	background-color: #F43737;
+}
+
 .text-normal {
 	color: black;
 }
