修改主页中的首页
增加我的订单显示

--- a/src/components/Home/HomePage.css
+++ b/src/components/Home/HomePage.css
@@ -76,3 +76,18 @@
 	-webkit-box-orient: vertical;
 }
 
+.home-page .my-orders .orders-title {
+	margin-top: 15px;
+
+	width: 100%;
+	text-align: left;
+
+	justify-content: space-between;
+}
+
+.home-page .my-orders .orders-title .right .image.favour {
+	margin-left: 5px;
+	
+	width: 15px;
+	height: 15px;	
+}
