主页面首页
完成布局

--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -57,7 +57,7 @@
 	width: 100%;
 	height: 50px;
 	line-height: 50px;
-	font-size: 18px;
+	font-size: 16px;
 	text-align: center;
 }
 
@@ -82,7 +82,7 @@
 	display: flex;
 	flex-flow: row;
 	justify-content: flex-start;
-	align-items: flex-start;	
+	align-items: center;	
 }
 
 .text-dark {
@@ -101,8 +101,16 @@
 	color: #ba0f0f;
 }
 
+.text-blue {
+	color: #3a8efa;
+}
+
 .background-red {
 	background-color: #F43737;
+}
+
+.background-blue {
+	background-color: #3a8efa;
 }
 
 .border-bottom {
