--- a/src/components/Home/HomePage.css
+++ b/src/components/Home/HomePage.css
@@ -1,6 +1,10 @@
 /*
 	Home page样式 
 */
+.home-page .label-value-margin {
+	margin-left: 10px;
+}
+
 .home-page .image.top {
   width: 100%;  
 }
@@ -87,7 +91,62 @@
 
 .home-page .my-orders .orders-title .right .image.favour {
 	margin-left: 5px;
-	
+
 	width: 15px;
 	height: 15px;	
+}
+
+.home-page .my-orders .orders-schedule {
+	height: 38px;
+	line-height: 38px;	
+	font-size: 18px;
+}
+
+.home-page .my-orders .orders-schedule .hyphen {
+	margin-left: 15px;
+
+	width: 28px;
+	height: 2px;
+}
+
+.home-page .my-orders .orders-schedule .terminal {
+	margin-left: 15px;
+}
+
+.home-page .my-orders .orders-info {
+	margin-bottom: 10px;
+}
+
+.home-page .my-orders .orders-info .arrival {
+	margin-left: 25px;
+}
+
+.home-page .warning-title {
+	margin-top: 15px;
+
+	width: 100%;
+	text-align: left;
+}
+
+.home-page .warning-time {
+	margin-top: 5px;
+
+	width: 100%;
+	text-align: left;
+}
+
+.home-page .warning-content {
+	margin-top: 5px;
+	margin-bottom: 15px;
+
+	width: 100%;
+	line-height: 20px;
+	max-height: 60px;
+	text-align: left;
+
+	overflow: hidden;
+	text-overflow: ellipsis;
+	display: -webkit-box;
+	-webkit-line-clamp: 3;
+	-webkit-box-orient: vertical;
 }
