--- a/src/components/Home/HomePage.css
+++ b/src/components/Home/HomePage.css
@@ -1,6 +1,8 @@
 /*
 	Home page样式 
 */
+@import '../../assets/styles/projectDailyReport.css';
+
 .home-page .label-value-margin {
 	margin-left: 10px;
 }
@@ -48,36 +50,6 @@
 	padding: 0 15px;
 
 	width: 100%;
-}
-
-.home-page .report-title {
-	margin-top: 15px;
-
-	width: 100%;
-	text-align: left;
-}
-
-.home-page .report-time {
-	margin-top: 5px;
-
-	width: 100%;
-	text-align: left;
-}
-
-.home-page .report-description {
-	margin-top: 5px;
-	margin-bottom: 15px;
-
-	width: 100%;
-	line-height: 20px;
-	max-height: 60px;
-	text-align: left;
-
-	overflow: hidden;
-	text-overflow: ellipsis;
-	display: -webkit-box;
-	-webkit-line-clamp: 3;
-	-webkit-box-orient: vertical;
 }
 
 .home-page .my-orders .orders-title {
