--- a/src/components/Common/FormTitle.css
+++ b/src/components/Common/FormTitle.css
@@ -22,10 +22,14 @@
   left: 0;
   top: 0;
 
-  width: calc(15px + 15px);
+  width: calc(10px + 10px);
   height: 50px;
-  background-image: url(../../assets/arrow-left.png);
-  background-position: right;
+  background-image: url(../../assets/arrow-right.png);
+  background-position: left;
   background-repeat: no-repeat;
+  background-size: 10px 20px;
+  
+  transform:rotate(180deg);
+
 }
 
