--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -87,3 +87,10 @@
 .border-bottom {
 	border-bottom: 1px solid #f3f3f3;
 }
+
+.list-bottom-hint {
+  width: 100%;
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
+}
