--- a/src/components/Common/FormBodyList.css
+++ b/src/components/Common/FormBodyList.css
@@ -1,10 +1,5 @@
 /*
-	查询列表低端的提示现实
+	通用查询列表的相关样式
 */
-.list-bottom-hint {
-  width: 100%;
-  height: 50px;
-  line-height: 50px;
-  text-align: center;
-}
+
 
