--- a/src/components/Home/Page.css
+++ b/src/components/Home/Page.css
@@ -20,3 +20,35 @@
 	width: calc(100% - 30px);
 	background-color: white;
 }
+
+.menu {
+	margin: 15px;
+	display: flex;
+	flex-flow: row !important;
+	justify-content: space-between !important;
+	align-items: center;
+
+	width: calc(100% - 60px);
+	height: 80px;
+	box-shadow: 0 0 5px rgba(0,0,0,0.2);
+	border-radius: 2px;
+}
+
+.menu  .image {
+	width: 40px;
+}
+
+.menu .image > img {
+  width: 35px !important;
+}
+
+.menu  .label {
+	margin-left: 10px;
+
+	font-size: 16px;
+}
+
+.menu  > img {
+	width: 7px;
+}
+
