--- a/src/components/Home/Me.css
+++ b/src/components/Home/Me.css
@@ -1,10 +1,65 @@
 /*
 	个人中心page样式 
 */
+.section {
+	margin-top: 10px;
+}
+
 .home-page .image.top {
   width: 100%;  
   height: 100px;
   
   background-image: url(../../assets/me-head-bg.png);
+}
+
+.home-page .image.top .avatar {
+	margin-left: 25px;
+	
+	width: 50px;
+	height: 100px;
+}
+
+.home-page .image.top .avatar > img {
+	width: 50px;
+	height: 50px;
+}
+
+.home-page .image.top .login {
+	margin-left: 15px;
+	
+	font-size: 15px;
+}
+
+.booking.section {
+	height: 50px;
+	
+	background-color: transparent;
+}
+
+.booking.section > .row{
+	margin-left: -15px;
+	justify-content: space-between;
+	
+	width: calc(100% + 30px);
+	height: 50px;
+}
+
+.booking.section > .row > .booking, .booking.section > .row > .my-booking {
+	justify-content: center;
+	
+	width: calc(50% - 1px);
+	height: 50px;
+	line-height: 50px;
+	background-color: white;
+	
+}
+
+.booking.section > .row  .button-image > img {
+	width: 35px;
+	height: 35px;
+}
+
+.booking.section > .row  .button-text {
+	margin-left: 13px;
 }
 
