--- a/src/components/Home/Me.css
+++ b/src/components/Home/Me.css
@@ -5,6 +5,10 @@
 	margin-top: 10px;
 }
 
+.border-bottom {
+	border-bottom: 1px solid #b7b7b7;
+}
+
 .home-page .image.top {
   width: 100%;  
   height: 100px;
@@ -54,9 +58,13 @@
 	
 }
 
+.booking.section > .row  .button-image {
+	width: 35px;
+	height: 50px;
+}
+
 .booking.section > .row  .button-image > img {
 	width: 35px;
-	height: 35px;
 }
 
 .booking.section > .row  .button-text {
@@ -87,4 +95,38 @@
 
 .orders.section  .all > .image > img {
 	width: 23px;
+}
+
+.user-info.section {
+	margin: 10px 10px 0 10px;
+	padding: 0;
+
+	width: calc(100% - 20px);
+	border: 1px solid #C8C8C8;
+	border-radius: 8px;
+	box-shadow: 0 0 6px 0 rgba(0,0,0,0.3);
+}
+
+.user-info.section > .row{
+	padding: 0 20px;
+	width: calc(100% - 40px);
+	min-height: 40px;
+	line-height: 40px;
+}
+
+.user-info.section > .row > .inner-row {
+	align-items: flex-start;
+	min-height: auto;
+}
+
+.user-info.section > .row > .inner-row  > .label{
+	width: 66px;
+	height: 25px;
+	line-height: 25px;	
+}
+
+.user-info.section > .row > .inner-row  > .value{
+	width: calc(100% - 66px);
+	min-height: 25px;
+	line-height: 25px;	
 }
