--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -103,8 +103,14 @@
 }
 
 .list-bottom-hint {
-  width: 100%;
-  height: 50px;
-  line-height: 50px;
-  text-align: center;
+	width: 100%;
+	height: 50px;
+	line-height: 50px;
+	text-align: center;
+}
+
+.box-shadow {
+	border: 1px solid #C8C8C8;
+	border-radius: 8px;
+	box-shadow: 0 0 6px 0 rgba(0,0,0,0.3);	
 }
