--- a/src/components/Home/HomeButtonBar.css
+++ b/src/components/Home/HomeButtonBar.css
@@ -5,7 +5,7 @@ div.button-bar {
   position: absolute;
   bottom: 0;
 
-  background-color: #ebebeb;
+  background-color: #f6f6f6;
   width: 100%;
   height: 50px;
   border-top: 1px solid #c8c8c8;
