20181211 完善订单详情

--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -114,3 +114,15 @@
 	border-radius: 8px;
 	box-shadow: 0 0 6px 0 rgba(0,0,0,0.3);	
 }
+
+.multi-line.row {
+	align-items: flex-start;
+	
+	height: auto;
+	min-height: 30px;
+}
+
+.multi-line.row > value {
+	height: auto;
+	word-break: break-all;
+}
