--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -102,6 +102,10 @@
 	border-bottom: 1px solid #f3f3f3;
 }
 
+.border-top {
+	border-top: 1px solid #f3f3f3;
+}
+
 .list-bottom-hint {
 	width: 100%;
 	height: 50px;
@@ -125,4 +129,14 @@
 .multi-line.row > value {
 	height: auto;
 	word-break: break-all;
+}
+
+.button {
+	width: 80px;
+	height: 30px;
+	line-height: 30px;
+	color: #f43737;
+	text-align: center;
+	border: 1px solid #f43737;
+	border-radius: 18px;
 }
