--- a/src/components/Orders/Detail.css
+++ b/src/components/Orders/Detail.css
@@ -38,12 +38,23 @@
 	margin-bottom: 7px;
 }
 
+.bill-head .detail-head.row {
+	margin-left: -10px;
+	
+	background-color: #ffe7e7;
+}
+
+.bill-head .detail-head.row > .label {
+	margin-left: 10px;
+}
+
 .detail {
-  margin-top: 60px;
+	margin-top: 260px;
+	margin-bottom: 45px;
 }
 
 .detail-item {
-	margin-top: 10px;
+	margin-top: 1px;
 }
 
 .detail-item > .row {
@@ -59,10 +70,35 @@
 }
 
 .detail-item > .row > .value {
-  font-weight: bold;
+  font-weight: normal;
 }
 
-.detail-item > .row.company {
-  color: #0454B2;
-  font-weight: bold;
+.bottom-bar.section {
+	position: fixed;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	
+	width: 100%;
+	height: 45px;
+}
+
+.bottom-bar.section > .bar.row {
+	justify-content: space-between;
+
+	width: calc(100% - 10px);
+}
+
+.bottom-bar.section  .left > .image {
+	width: 45px;
+	height: 45px;
+}
+
+.bottom-bar.section  .left > .image > img {
+	width: 40px;
+	height: auto;
+}
+
+.button {
+	margin-left: 10px;
 }
