--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -28,6 +28,10 @@
   background-color: #c8c8c8 !important;
 }
 
+.ef-click-red:active {
+  background-color: rgba(255,0,0,0.5) !important;
+}
+
 .image {
 	display: flex;
 	flex-flow: column;
@@ -136,7 +140,22 @@
 	height: 30px;
 	line-height: 30px;
 	color: #f43737;
-	text-align: center;
 	border: 1px solid #f43737;
 	border-radius: 18px;
+	font-size: 14px;
+	text-align: center;
+	letter-spacing: 1px;
+}
+
+.button-red {
+	width: 80px;
+	height: 30px;
+	line-height: 30px;
+	color: white;
+	background-color: #f43737; 
+	border: 1px solid #f43737;
+	border-radius: 5px;	
+	font-size: 15px;
+	text-align: center;
+	letter-spacing: 1px;
 }
