--- a/src/components/Home/HomePage.css
+++ b/src/components/Home/HomePage.css
@@ -3,6 +3,7 @@
 */
 @import '../../assets/styles/myOrder.css';
 @import '../../assets/styles/projectDailyReport.css';
+@import '../../assets/styles/warning.css';
 
 .home-page .label-value-margin {
 	margin-left: 10px;
@@ -47,34 +48,4 @@
 	padding: 0 15px;
 
 	width: 100%;
-}
-
-.home-page .warning-title {
-	margin-top: 15px;
-
-	width: 100%;
-	text-align: left;
-}
-
-.home-page .warning-time {
-	margin-top: 5px;
-
-	width: 100%;
-	text-align: left;
-}
-
-.home-page .warning-content {
-	margin-top: 5px;
-	margin-bottom: 15px;
-
-	width: 100%;
-	line-height: 20px;
-	max-height: 60px;
-	text-align: left;
-
-	overflow: hidden;
-	text-overflow: ellipsis;
-	display: -webkit-box;
-	-webkit-line-clamp: 3;
-	-webkit-box-orient: vertical;
 }
