--- a/src/components/Common/FormTitle.css
+++ b/src/components/Common/FormTitle.css
@@ -24,7 +24,7 @@
 
   width: calc(10px + 10px);
   height: 50px;
-  background-image: url(../../assets/arrow-right.png);
+  background-image: url(../../assets/arrow-right-red.png);
   background-position: left;
   background-repeat: no-repeat;
   background-size: 10px 20px;
