--- a/src/components/Orders/Detail.css
+++ b/src/components/Orders/Detail.css
@@ -79,26 +79,5 @@
 	right: 0;
 	bottom: 0;
 	
-	width: 100%;
-	height: 45px;
-}
-
-.bottom-bar.section > .bar.row {
-	justify-content: space-between;
-
-	width: calc(100% - 10px);
-}
-
-.bottom-bar.section  .left > .image {
-	width: 45px;
-	height: 45px;
-}
-
-.bottom-bar.section  .left > .image > img {
-	width: 40px;
-	height: auto;
-}
-
-.button {
-	margin-left: 10px;
+	border-top: 1px solid #f3f3f3;
 }
