20190107 整合LESS，准备优化css

--- a/src/assets/styles/index.less
+++ b/src/assets/styles/index.less
@@ -1,7 +1,8 @@
 /*
-	主样式文件 
+	global style
 */
-@import './form.css';
+@import './form';
+@import './button';
 
 #application {
   margin: 0;
@@ -143,27 +144,4 @@
 	word-break: break-all;
 }
 
-.button {
-	width: 80px;
-	height: 30px;
-	line-height: 30px;
-	color: #f43737;
-	border: 1px solid #f43737;
-	border-radius: 18px;
-	font-size: 14px;
-	text-align: center;
-	letter-spacing: 1px;
-}
 
-.button-red {
-	width: 80px;
-	height: 30px;
-	line-height: 30px;
-	color: white;
-	background-color: #f43737; 
-	border: 1px solid #f43737;
-	border-radius: 5px;	
-	font-size: 15px;
-	text-align: center;
-	letter-spacing: 1px;
-}
